[package]
name = "topaz-discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "off"

[dependencies]
lz-str = "0.1.0"
hyper = "*"
hyper-rustls = "*"
topaz-tak = {git = "https://github.com/Jakur/topaz-tak", rev = "855984c" }
anyhow = "1"
dotenv = "0.15"
regex = "1.5"
lazy_static = "*"
once_cell = "*"
tracing = "0.1.23"
tracing-subscriber = "0.2"
inferno = { git = "https://github.com/Jakur/inferno", branch = "topaz" }

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt", "fs"]

[dependencies.serenity]
default-features = false
features = [
    "rustls_backend",
    "http",
    "model",
    "gateway",
    "client",
    # "framework",
    # "standard_framework"
]
version = "0.11.5"