[package]
name = "topaz-discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "off"

[dependencies]
lz-str = "0.2"
hyper = "*"
hyper-rustls = "*"
topaz-tak = {git = "https://github.com/Jakur/topaz-tak", rev = "a7426fc" }
anyhow = "1"
dotenv = "0.15"
regex = "1.5"
lazy_static = "*"
once_cell = "*"
tracing = "0.1.23"
tracing-subscriber = "0.2"
inferno = { git = "https://github.com/Jakur/inferno", branch = "topaz" }
rand = "*"

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt", "fs"]

[dependencies.serenity]
default-features = false
features = [
    "rustls_backend",
    "model",
    "gateway",
    "client",
]
version = "0.11.5"