[package]
name = "topaz-discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "off"

[[bin]]
name="local"
path = "src/local.rs"

[[bin]]
name="main"
path = "src/main.rs"

[dependencies]
lz-str = "0.2"
hyper = "0.14.28"
hyper-rustls = "0.24.2"
topaz-tak = {git = "https://github.com/Jakur/topaz-tak", rev = "4980d5b" }
anyhow = "1"
dotenv = "0.15"
regex = "1.5"
lazy_static = "*"
once_cell = "*"
tracing = "0.1.23"
tracing-subscriber = "0.2"
inferno = { git = "https://github.com/Jakur/inferno", branch = "topaz" }
rand = "*"

[dependencies.tokio]
version = "1.0"
features = ["macros", "signal", "rt", "fs", "rt-multi-thread"]

[dependencies.serenity]
default-features = false
features = [
    "rustls_backend",
    "model",
    "gateway",
    "client",
    "builder",
]
version = "0.12.0"